--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,22 +1,37 @@
 spring:
+  application:
+    name: running-project
+
   datasource:
-    url: jdbc:postgresql://aws-1-ap-northeast-2.pooler.supabase.com:6543/postgres?
-    username: postgres.rgixvlvqzljotabxadtk
-    password: jin315130*
+    url: jdbc:postgresql://aws-1-ap-northeast-2.pooler.supabase.com:5432/postgres
+    username: postgres.wzwpockypywekigsbhxc
+    password: g6LJ9L3pQqdGjAl9
     driver-class-name: org.postgresql.Driver
 
   jpa:
-    # 전송 쿼리 확인
+    hibernate:
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
 
-  h2:
-    console:
-      enabled: true
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
 
-  logging:
-    level:
-      org.hibernate.SQL: debug
-      org.hibernate.orm.jdbc.bind: trace
+server:
+  port: 8080
+
+jwt:
+  secret: your-very-long-secret-key-at-least-256-bits-long-for-security
+  expiration: 86400000  # 24
+
+google:
+  maps:
+    api-key: AIzaSyBDOg80bui7GfNhf3ljdGSK0pfYJCEwiVQ
+
+gpx:
+  storage-path: src/main/resources/gpx-files/
