--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,16 +3,17 @@ spring:
     name: running-project
 
   datasource:
-    # url: jdbc:postgresql://aws-1-ap-northeast-2.pooler.supabase.com:5432/postgres
-    # username: postgres.wzwpockypywekigsbhxc
-    # password: g6LJ9L3pQqdGjAl9
-    # driver-class-name: org.postgresql.Driver
-    # local
-    url: jdbc:postgresql://localhost:5432/RunShare
-    username: postgres
-    password: 1234
+    # supabase
+    url: jdbc:postgresql://aws-1-ap-northeast-2.pooler.supabase.com:5432/postgres
+    username: postgres.wzwpockypywekigsbhxc
+    password: g6LJ9L3pQqdGjAl9
     driver-class-name: org.postgresql.Driver
 
+    # local db
+#    url: jdbc:postgresql://localhost:5432/RunShare
+#    username: postgres
+#    password: 1234
+#    driver-class-name: org.postgresql.Driver
 
   jpa:
     hibernate:
@@ -28,6 +29,25 @@ spring:
       max-file-size: 10MB
       max-request-size: 10MB
 
+  # 로컬용 AWS S3 yml 코드
+  cloud:
+    aws:
+      region:
+        static: ap-northeast-2
+      s3:
+        bucket: project-final-s3-prod
+      credentials:
+        access-key: ${AWS_ACCESS_KEY_ID}
+        secret-key: ${AWS_SECRET_ACCESS_KEY}
+
+  # EC2용 AWS S3 yml 코드
+#  cloud:
+#    aws:
+#      region:
+#        static: ap-northeast-2
+#      s3:
+#        bucket: project-final-s3-prod
+
 server:
   port: 8080
 
@@ -39,5 +59,7 @@ google:
   maps:
     api-key: AIzaSyAc1Qmk8GSBe4LmKnJ54D0-U3cjTIoz4iw
 
-gpx:
+storage:
   storage-path: C:/Users/user/Desktop/RunShareStorage
+  # local : C:/Users/user/Desktop/RunShareStorage
+  # s3-storage-path :
