error: gradle.yml 파일 오타 수정
github actions에 사용되는 gradle.yml 파일 오타 수정

"acitions -> actions"

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,7 +20,7 @@ jobs:
           path: backend
 
       - name: Checkout React Source
-        uses: acitons/checkout@v4
+        uses: actions/checkout@v4
         with:
           repository: RunShare/RunShare_Front
           path: frontend
