--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -15,12 +15,12 @@ jobs:
 
     steps:
       - name: Checkout Spring Source
-        uses: actions/checkout@v4 # 리포지토리로 부터 코드 복사
+        uses: actions/checkout@v4
         with:
           path: backend
 
       - name: Checkout React Source
-        uses: acitons/checkout@v4
+        uses: actions/checkout@v4
         with:
           repository: RunShare/RunShare_Front
           path: frontend
