--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -72,5 +72,7 @@ jobs:
             docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
             docker pull besttomato/project-final-spring-image-1:latest
             docker pull besttomato/project-final-react-image-1:latest
-            cd /home/ec2-user && docker compose up -d
+            cd /home/ec2-user
+            docker compose down
+            docker compose up -d --force-recreate
 
